<resources>
    <string name="app_name">扫描助手Cloud版</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wgrkxt">外购入库下推</string>
    <string name="storage">仓库</string>
    <string name="wavehouse">仓位</string>
    <string name="name">名称</string>
    <string name="unit">单位</string>
    <string name="pihao">批号</string>
    <string name="num">数量</string>
    <string name="add">添加</string>
    <string name="push">回单</string>
    <string name="review">查看</string>
    <string name="bring_storage">是否带出默认仓库</string>
    <string name="auto_add">自动添加</string>
    <string name="date">日期:</string>
    <string name="purchase_method">采购方式:</string>
    <string name="jh_adress">交货地点:</string>
    <string name="manager">主管:</string>
    <string name="hbdxtcprk">汇报单下推产品入库</string>
    <string name="hebing">合并</string>
    <string name="db">调拨</string>
    <string name="out_storage">调出仓库</string>
    <string name="out_wavehouse">调出仓位</string>
    <string name="in_storage">调入仓库</string>
    <string name="in_wavehouse">调入仓位</string>
    <string name="product_code">物料编码</string>
    <string name="product_name">物料名称</string>
    <string name="out_store">调出库存</string>
    <string name="in_store">调入库存</string>
    <string name="model">规格型号</string>
    <string name="finish_order">完单</string>
    <string name="department">部门:</string>
    <string name="employee">业务员:</string>
    <string name="sign_person">验收:</string>
    <string name="capture_person">保管:</string>
    <string name="fhtzd_xt_dbd">发货通知单下推调拨单</string>
    <string name="store">库存</string>
    <string name="beizhu">备注</string>
    <string name="spEmployee_po">spEmployee_po</string>
    <string name="spManager_po">spManager_po</string>
    <string name="spDepartment_po">spDepartment_po</string>
    <string name="spPayMethod_po">spPayMethod_po</string>
    <string name="spYuandan_po">spYuandan_po</string>
    <string name="spPurchaseMethod_po">spPurchaseMethod_po</string>
    <string name="spPurchaseScope_po">spPurchaseScope_po</string>
    <string name="spEmployee_pis">spEmployee_pis</string>
    <string name="spBuyer_pis">spBuyer_pis</string>
    <string name="spSaleMan_pis">spSaleMan_pis</string>
    <string name="spStoreMan_pis">spStoreMan_pis</string>
    <string name="spDepartmentGet_pis">spDepartmentGet_pis</string>
    <string name="spOrgbuy_pis">spOrgbuy_pis</string>
    <string name="spOrgget_pis">spOrgget_pis</string>
    <string name="spBuyer_pg">spBuyer_pg</string>
    <string name="spStoreman_pg">spStoreman_pg</string>
    <string name="spOrgCreate_pg">spOrgCreate_pg</string>
    <string name="spOrgSend_pg">spOrgSend_pg</string>
    <string name="spOrgHuozhu_pg">spOrgHuozhu_pg</string>
    <string name="spDepartmentCreate_pg">spDepartmentCreate_pg</string>
    <string name="spDepartmentSend_so">spDepartmentSend_so</string>
    <string name="spDepartmentSale_so">spDepartmentSale_so</string>
    <string name="spOrgSend_so">spOrgSend_so</string>
    <string name="spStoreman_so">spStoreman_so</string>
    <string name="spSaleman_so">spSaleman_so</string>
    <string name="spDepartmentSale_sor">spDepartmentSale_sor</string>
    <string name="spOrgSale_sor">spOrgSale_sor</string>
    <string name="spSaleman_sor">spSaleman_sor</string>
    <string name="spStoreman_ois">spStoreman_ois</string>
    <string name="spCheck_ois">spCheck_ois</string>
    <string name="spOrgStore_ois">spOrgStore_ois</string>
    <string name="spDepartmentGet_ois">spDepartmentGet_ois</string>
    <string name="spStoreman_oos">spStoreman_oos</string>
    <string name="spGetMan_oos">spGetMan_oos</string>
    <string name="spOrgStore_oos">spOrgStore_oos</string>
    <string name="spOrgGet_oos">spOrgGet_oos</string>
    <string name="spDepartmentGet_oos">spDepartmentGet_oos</string>
    <string name="spDepartmentBuy_puo">spDepartmentBuy_puo</string>
    <string name="spBuyer_puo">spBuyer_puo</string>
    <string name="spOrgBuy_puo">spOrgBuy_puo</string>
    <string name="spDepartmentSend_so_pd">spDepartmentSend_so_pd</string>
    <string name="spOrgSend_so_pd">spOrgSend_so_pd</string>
    <string name="spStoreman_so_pd">spStoreman_so_pd</string>
    <string name="spSaleman_so_pd">spSaleman_so_pd</string>
    <string name="spDepartmentStore_sr_bk_pd">spDepartmentStore_sr_bk_pd</string>
    <string name="spDepartmentSale_sr_bk_pd">spDepartmentSale_sr_bk_pd</string>
    <string name="spOrgStore_sr_bk_pd">spOrgStore_sr_bk_pd</string>
    <string name="spOrgSale_sr_bk_pd">spOrgSale_sr_bk_pd</string>
    <string name="spStoreman_sr_bk_pd">spStoreman_sr_bk_pd</string>
    <string name="spSaleman_sr_bk_pd">spSaleman_ssr_bk_pd</string>
    <string name="spDepartmentStore_so_bk_pd">spDepartmentStore_so_bk_pd</string>
    <string name="spDepartmentSale_so_bk_pd">spDepartmentSale_so_bk_pd</string>
    <string name="spOrgStore_so_bk_pd">spOrgStore_so_bk_pd</string>
    <string name="spOrgSale_so_bk_pd">spOrgSale_so_bk_pd</string>
    <string name="spStoreman_so_bk_pd">spStoreman_so_bk_pd</string>
    <string name="spSaleman_so_bk_pd">spSaleman_sso_bk_pd</string>
    <string name="spDepartmentStore_bkmsg_sbk_pd">spDepartmentStore_bkmsg_sbk_pd</string>
    <string name="spDepartmentSale_bkmsg_sbk_pd">spDepartmentSale_bkmsg_sbk_pd</string>
    <string name="spOrgStore_bkmsg_sbk_pd">spOrgStore_bkmsg_sbk_pd</string>
    <string name="spOrgSale_bkmsg_sbk_pd">spOrgSale_bkmsg_sbk_pd</string>
    <string name="spStoreman_bkmsg_sbk_pd">spStoreman_bkmsg_sbk_pd</string>
    <string name="spSaleman_bkmsg_sbk_pd">spSaleman_sbkmsg_sbk_pd</string>
    <string name="spOrgStore_In_db_in_pd">spOrgStore_In_db_in_pd</string>
    <string name="spOrgStore_Out_db_in_sbk_pd">spOrgStore_Out_db_in_sbk_pd</string>
    <string name="spStoreman_db_in_pd">spStoreman_db_in_pd</string>
    <string name="spStorage_pd">spStorage_pd</string>
    <string name="spManager_pis">spManager_pis</string>
    <string name="spDepartmentbuy_pis">spDepartmentbuy_pis</string>
    <string name="spDepartmentget_pis">spDepartmentget_pis</string>
    <string name="spPayMethod_pis">spPayMethod_pis</string>
    <string name="spYuandan_pis">spYuandan_pis</string>
    <string name="spPurchaseMethod_pis">spPurchaseMethod_pis</string>
    <string name="spPurchaseScope_pis">spPurchaseScope_pis</string>
    <string name="spWanglaikemu_pis">spWanglaikemu_pis</string>
    <string name="spSignPerson_pis">spSignPerson_pis</string>
    <string name="spCapturePerson_pis">spCapturePerson_pis</string>
    <string name="spStoreman_bmsg2sb">spStoreman_bmsg2sb</string>
    <string name="spHuozhu_bmsg2sb">spHuozhu_bmsg2sb</string>
    <string name="spDepartmentBuy_cg2wg">spDepartmentBuy_cg2wg</string>
    <string name="spOrgBuy_cg2wg">spOrgBuy_cg2wg</string>
    <string name="spBuyer_cg2wg">spBuyer_cg2wg</string>
    <string name="spStoreman_pris">spStoreman_pris</string>
    <string name="spDepartmentGet_pris">spDepartmentGet_pris</string>
    <string name="spWhichStorage_pris">spWhichStorage_pris</string>
    <string name="spOrgIn_pris">spOrgIn_pris</string>
    <string name="spOrgCreate_pris">spOrgCreate_pris</string>
    <string name="spOrgHuozhu_pris">spOrgHuozhu_pris</string>
    <string name="spBuyer_tbget">spBuyer_tbget</string>
    <string name="spStoreman_tbget">spStoreman_tbget</string>
    <string name="spOrgCreate_tbget">spOrgCreate_tbget</string>
    <string name="spOrgSend_tbget">spOrgSend_tbget</string>
    <string name="spOrgHuozhu_tbget">spOrgHuozhu_tbget</string>
    <string name="spDepartmentCreate_tbget">spDepartmentCreate_tbget</string>
    <string name="spStoreman_pris_tb">spStoreman_pris_tb</string>
    <string name="spDepartmentGet_pris_tb">spDepartmentGet_pris_tb</string>
    <string name="spWhichStorage_pris_tb">spWhichStorage_pris_tb</string>
    <string name="spOrgIn_pris_tb">spOrgIn_pris_tb</string>
    <string name="spOrgCreate_pris_tb">spOrgCreate_pris_tb</string>
    <string name="spOrgHuozhu_pris_tb">spOrgHuozhu_pris_tb</string>
    <string name="spBuyer_gbget">spBuyer_gbget</string>
    <string name="spStoreman_gbget">spStoreman_gbget</string>
    <string name="spOrgCreate_gbget">spOrgCreate_gbget</string>
    <string name="spOrgSend_gbget">spOrgSend_gbget</string>
    <string name="spOrgHuozhu_gbget">spOrgHuozhu_gbget</string>
    <string name="spDepartmentCreate_gbget">spDepartmentCreate_gbget</string>
    <string name="spStoreman_pris_gbin">spStoreman_pris_gbin</string>
    <string name="spDepartmentGet_pris_gbin">spDepartmentGet_pris_gbin</string>
    <string name="spWhichStorage_pris_gbin">spWhichStorage_pris_gbin</string>
    <string name="spOrgIn_pris_gbin">spOrgIn_pris_gbin</string>
    <string name="spOrgCreate_pris_gbin">spOrgCreate_pris_gbin</string>
    <string name="spOrgHuozhu_pris_gbin">spOrgHuozhu_pris_gbin</string>
    <string name="spStoreman_pris_dh">spStoreman_pris_dh</string>
    <string name="spDepartmentGet_pris_dh">spDepartmentGet_pris_dh</string>
    <string name="spWhichStorage_pris_dh">spWhichStorage_pris_dh</string>
    <string name="spOrgIn_pris_dh">spOrgIn_pris_dh</string>
    <string name="spOrgCreate_pris_dh">spOrgCreate_pris_dh</string>
    <string name="spOrgHuozhu_pris_dh">spOrgHuozhu_pris_dh</string>
    <string name="spStoreman_pris_dh2">spStoreman_pris_dh2</string>
    <string name="spDepartmentGet_pris_dh2">spDepartmentGet_pris_dh2</string>
    <string name="spWhichStorage_pris_dh2">spWhichStorage_pris_dh2</string>
    <string name="spOrgIn_pris_dh2">spOrgIn_pris_dh2</string>
    <string name="spOrgCreate_pris_dh2">spOrgCreate_pris_dh2</string>
    <string name="spOrgHuozhu_pris_dh2">spOrgHuozhu_pris_dh2</string>
    <string name="spStoreman_pris_dg">spStoreman_pris_dg</string>
    <string name="spDepartmentGet_pris_dg">spDepartmentGet_pris_dg</string>
    <string name="spWhichStorage_pris_dg">spWhichStorage_pris_dg</string>
    <string name="spOrgIn_pris_dg">spOrgIn_pris_dg</string>
    <string name="spOrgCreate_pris_dg">spOrgCreate_pris_dg</string>
    <string name="spOrgHuozhu_pris_dg">spOrgHuozhu_pris_dg</string>
    <string name="spStoreman_pris_simplein">spStoreman_pris_simplein</string>
    <string name="spDepartmentGet_pris_simplein">spDepartmentGet_pris_simplein</string>
    <string name="spWhichStorage_pris_simplein">spWhichStorage_pris_simplein</string>
    <string name="spOrgIn_pris_simplein">spOrgIn_pris_simplein</string>
    <string name="spOrgCreate_pris_simplein">spOrgCreate_pris_simplein</string>
    <string name="spOrgHuozhu_pris_simplein">spOrgHuozhu_pris_simplein</string>
    <string name="spStoreman_oin">spStoreman_oin</string>
    <string name="spDepartmentGet_oin">spDepartmentGet_oin</string>
    <string name="spWhichStorage_oin">spWhichStorage_oin</string>
    <string name="spOrgIn_oin">spOrgIn_oin</string>
    <string name="spOrgCreate_oin">spOrgCreate_oin</string>
    <string name="spHzType_oin">spHzType_oin</string>
    <string name="spOrgHuozhu_oin">spOrgHuozhu_oin</string>
    <string name="upload">上传</string>
    <string name="in_store_date">入库日期:</string>
    <string name="business_no">业务单号:</string>
    <string name="business_no_hint">请输入业务单号</string>
    <string name="note">备注：</string>
    <string name="store_man">仓管员:</string>
    <string name="store_man_hint">请选择仓管员</string>
    <string name="huozhu">货主:</string>
    <string name="huozhu_hint">请选择货主</string>
    <string name="production_org_hint">请选择生产组织</string>
    <string name="supplier">供应商:</string>
    <string name="storage_hint">请选择仓库</string>
    <string name="store_org">库存组织:</string>
    <string name="store_org_hint">请选择库存组织</string>
    <string name="huozhu_type">货主类型:</string>
    <string name="huozhu_type_hint">请选择货主类型</string>
    <string name="start_date">起始日期:</string>
    <string name="ending_date">结束日期:</string>
    <string name="longclick_clear">长按清空</string>
    <string name="download">下载</string>
    <string name="find">查找</string>
    <string name="order_no">单据编号:</string>
</resources>