<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.pushdown.ChooseFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <CheckBox
                    android:visibility="gone"
                    android:id="@+id/cb_isStorage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="是否带出默认仓库"
                    android:textSize="18sp"
                    android:textColor="@android:color/holo_red_light"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/in_store_date"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp" />


                <TextView
                    android:text="@string/business_no"
                    android:textSize="22sp"
                    android:textColor="#1e1e1e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/ed_ff_order"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:hint="@string/business_no_hint"
                    android:gravity="center_horizontal|center_vertical"
                    android:background="@drawable/bg_edittext_selector"
                    android:singleLine="true"
                    android:textSize="20sp" />
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/supplier"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ed_supplier"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="3.5"
                        android:background="@drawable/bg_edittext_selector"
                        android:gravity="center"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />

                    <RelativeLayout
                        android:id="@+id/search_supplier"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@mipmap/search" />
                    </RelativeLayout>

                </LinearLayout>
                <include
                    layout="@layout/line_heng"/>
                <TextView
                    android:text="部门:"
                    android:textSize="22sp"
                    android:textColor="#1e1e1e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <com.fangzuo.assist.cloud.widget.SpinnerDepartMent
                    android:id="@+id/sp_department_get"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    app:Uspinner_title="请选择部门"/>
                <include
                    layout="@layout/line_heng"/>
                <TextView
                    android:text="@string/storage"
                    android:textSize="22sp"
                    android:textColor="#1e1e1e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <com.fangzuo.assist.cloud.widget.SpinnerStorage
                    android:id="@+id/sp_which_storage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    app:Uspinner_title="@string/storage_hint"/>
                <include
                    layout="@layout/line_heng"/>
                <com.fangzuo.assist.cloud.widget.SpinnerOrg
                    android:id="@+id/sp_org_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:manspinner_name="@string/store_org"
                    app:manspinner_title="@string/store_org_hint"
                    app:manspinner_size="@dimen/sp_title_size" />
                <include
                    layout="@layout/line_heng"/>
                <com.fangzuo.assist.cloud.widget.SpinnerCommon
                    android:id="@+id/sp_hz_type"
                    app:manspinner_name="@string/huozhu_type"
                    app:manspinner_title="@string/huozhu_type_hint"
                    app:manspinner_size="@dimen/sp_title_size"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <include
                    layout="@layout/line_heng"/>
                <LinearLayout
                    android:id="@+id/ll_supplier_hz"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:text="@string/supplier"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/ed_supplier_hz"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="3.5"
                        android:background="@drawable/bg_edittext_selector"
                        android:gravity="center"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />

                    <RelativeLayout
                        android:id="@+id/search_supplier_hz"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@mipmap/search" />
                    </RelativeLayout>

                </LinearLayout>
                <include
                    layout="@layout/line_heng"/>
                <com.fangzuo.assist.cloud.widget.SpinnerHuozhu
                    android:visibility="gone"
                    android:id="@+id/sp_org_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:manspinner_name="@string/huozhu"
                    app:manspinner_title="@string/production_org_hint"
                    app:manspinner_size="@dimen/sp_title_size" />
                <com.fangzuo.assist.cloud.widget.SpinnerOrg
                    android:visibility="gone"
                    android:id="@+id/sp_org_huozhu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:manspinner_name="@string/huozhu"
                    app:manspinner_title="@string/huozhu_hint"
                    app:manspinner_size="@dimen/sp_title_size" />

                <com.fangzuo.assist.cloud.widget.SpinnerStoreMan
                    android:visibility="gone"
                    android:id="@+id/sp_storeman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:manspinner_name="@string/store_man"
                    app:manspinner_title="@string/store_man_hint"
                    app:manspinner_size="@dimen/sp_people_title_size" />
                <TextView
                    android:text="@string/note"
                    android:textSize="@dimen/sp_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/ed_not"
                    android:paddingLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/bg_edittext_selector"
                    android:textSize="21sp" />
                <com.fangzuo.assist.cloud.widget.NumberClick
                    android:id="@+id/cb_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>


</RelativeLayout>
