<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.pushdown.DownLoadPushFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:id="@+id/rl1"
        android:layout_alignParentBottom="true"
        >
        <com.fangzuo.assist.cloud.widget.SpinnerClientDlg
            android:id="@+id/sp_client"
            android:layout_width="match_parent"
            app:clientspinner_name="往来单位:"
            app:clientspinner_hint="请输入客户过滤条件:"
            app:clientspinner_size="8sp"
            android:layout_height="wrap_content"/>
        <com.fangzuo.assist.cloud.widget.SpinnerSupplier
            android:id="@+id/sp_supplier"
            android:visibility="gone"
            android:layout_width="match_parent"
            app:clientspinner_name="往来单位:"
            app:clientspinner_size="8sp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/order_no"/>
            <EditText
                android:id="@+id/ed_code"
                android:layout_width="match_parent"
                android:gravity="center"
                android:background="@android:drawable/edit_text"
                android:layout_height="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="6"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/start_date"/>
            <TextView
                android:hint="@string/longclick_clear"
                android:id="@+id/start_date"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:singleLine="true"
                android:gravity="center"
                android:background="@android:drawable/edit_text"
                android:layout_height="40dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/ending_date"/>
            <TextView
                android:hint="@string/longclick_clear"
                android:id="@+id/end_date"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:singleLine="true"
                android:background="@android:drawable/edit_text"
                android:layout_height="40dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_download"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/download"
                android:background="@drawable/btn_login"
                android:layout_marginRight="1dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/find"
                android:background="@drawable/btn_login"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/v1"
        android:layout_above="@id/rl1"
        android:background="@color/sienna"/>
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_above="@id/rl1"
        android:id="@+id/refresh"
        android:layout_height="match_parent">
        <ListView
            android:background="@color/cpb_grey"
            android:id="@+id/lv_pushdown_download"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.v4.widget.SwipeRefreshLayout>


</RelativeLayout>
