<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:weightSum="3"
    android:background="@android:color/white">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_check"
            android:text="@string/add"
            android:textSize="@dimen/size_btn"
            android:textColor="@android:color/white" />

        <View
            android:visibility="gone"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/divider_color" />

        <Button
            android:visibility="gone"
            android:textSize="@dimen/size_btn"
            android:id="@+id/btn_finishorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_check"
            android:text="完单"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/divider_color" />

        <Button
            android:id="@+id/btn_backorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_check"
            android:text="@string/upload"
            android:textSize="@dimen/size_btn"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/divider_color" />

        <Button
            android:id="@+id/btn_checkorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_check"
            android:text="@string/review"
            android:textSize="@dimen/size_btn"
            android:textColor="@android:color/white" />

    </LinearLayout>

</layout>